트림 변경 업데이트

--- a/data/data.yaml
+++ b/data/data.yaml
@@ -36,6 +36,11 @@ options:
       가격: 2000
     - 이름: Red Multi-Coat
       가격: 2500
+  interior:
+    - 이름: 블랙
+      가격: 0
+    - 이름: 블랙 & 화이트
+      가격: 1000
   wheal:
     - 이름: 에어로
       사이즈: 18인치
