--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tesla-model-3-korea",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/geeksbaek/tesla-model-3-korea",
+  "homepage": "https://geeksbaek.github.com/tesla-model-3-korea",
   "dependencies": {
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
