트림 업데이트

--- a/data/model_3.yaml
+++ b/data/model_3.yaml
@@ -4,7 +4,7 @@ trims:
     배터리: Standard Plus
     주행거리(km): 386
     0-60: 5.3
-    구동방식: Rear-Wheel Drive
+    구동방식: RWD
     승차인원: 5
     인테리어: 준 프리미엄
     가격: 39500
@@ -12,7 +12,7 @@ trims:
     배터리: Long Range
     주행거리(km): 499
     0-60: 4.5
-    구동방식: Dual Motor All-Wheel Drive
+    구동방식: Dual Motor AWD
     승차인원: 5
     인테리어: 프리미엄
     가격: 50500
@@ -20,7 +20,7 @@ trims:
     배터리: Long Range
     주행거리(km): 499
     0-60: 3.2
-    구동방식: Dual Motor All-Wheel Drive
+    구동방식: Dual Motor AWD
     승차인원: 5
     인테리어: 프리미엄
     가격: 61500
