--- a/data/model_3.yaml
+++ b/data/model_3.yaml
@@ -41,16 +41,16 @@ options:
       가격: 0
     - 이름: Black & White Interior
       가격: 1000
-  wheel:
-    - 이름: Aero Wheel
+  wheels:
+    - 이름: Aero Wheels
       사이즈: 18"
       가격: 0
       _only: "!Performance"
-    - 이름: Sport Wheel
+    - 이름: Sport Wheels
       사이즈: 19"
       가격: 1500
       _only: "!Performance"
-    - 이름: Performance Wheel
+    - 이름: Performance Wheels
       사이즈: 20"
       가격: 0
       _only: Performance
