옵션 업데이트

--- a/data/model_3.yaml
+++ b/data/model_3.yaml
@@ -55,5 +55,7 @@ options:
       가격: 0
       _only: Performance
   autopilot:
-    - 이름: Full Self-Driving
+    - 이름: Autopilot Included
+      가격: 0
+    - 이름: Full Self-Driving Capability
       가격: 5000
