--- a/data/model_3.yaml
+++ b/data/model_3.yaml
@@ -57,7 +57,7 @@ options:
       _only: Performance
   autopilot:
     - 이름: Autopilot Included
-      설명: Enables your car to steer, accelerate and brake automatically for other vehicles and pedestrians within its lane.
+      설명: "Autopilot Included: Enables your car to steer, accelerate and brake automatically for other vehicles and pedestrians within its lane."
       가격: 0
     - 이름: Full Self-Driving Capability
       설명: "Navigate on Autopilot: automatic driving from highway on-ramp to off-ramp including interchanges and overtaking slower cars.\nAuto lane Change: automatic lane changes while driving on the highway.\nAutopark: both parallel and perpendicular spaces.\nSummon: your parked car will come find you anywhere in a parking lot. Really.\n(Coming later this year) Recognize and respond to traffic lights and stop signs.\n(Coming later this year) Automatic driving on city streets."
