--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "tesla-model-3-korea",
+  "name": "tesla-model-3-earlybird",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://geeksbaek.github.com/tesla-model-3-korea",
+  "homepage": "https://geeksbaek.github.com/tesla-model-3-earlybird",
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.11.1",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-firebaseui": "^3.1.2",
     "react-native-rss-parser": "^1.3.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
